<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/add_ride_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_for_sure"/>

    <Button
        android:id="@+id/cancel_add_ride_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_add"/>

    <TextView
        android:id="@+id/add_reminder"
        android:layout_marginTop="7dp"
        android:text="@string/add_edit_reminder"
        android:layout_below="@id/add_ride_button"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:textColor="@color/requiredReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/add_date_layout"
        android:layout_marginTop="7dp"
        android:orientation="horizontal"
        android:layout_below="@id/add_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:text="@string/date_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/add_date_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:inputType="date"
            android:gravity="center_vertical"
            android:hint = "@string/date_hint"/>

        <TextView
            android:text="@string/date_format_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/requiredReminder"
            android:gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_time_layout"
        android:orientation="horizontal"
        android:layout_below="@id/add_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:text="@string/time_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/add_time_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textSize="18sp"
            android:layout_weight="1"
            android:hint="@string/time_hint"
            android:inputType="time"
            android:gravity="center_vertical" />

        <TextView
            android:text="@string/time_format_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/requiredReminder"
            android:gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_distance_layout"
        android:layout_below="@id/add_time_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:text="@string/distance_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/add_distance_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:hint="@string/distance_hint"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:inputType="numberDecimal"
            android:gravity="center_vertical" />

        <TextView
            android:text="*"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/requiredReminder"
            android:gravity="center_vertical" />

        <TextView
            android:text="@string/distance_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_speed_layout"
        android:layout_below="@id/add_distance_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:text="@string/avg_speed_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/add_avg_speed_detail"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:hint="@string/speed_hint"
            android:inputType="numberDecimal"
            android:gravity="center_vertical" />

        <TextView
            android:text="*"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/requiredReminder"
            android:gravity="center_vertical" />

        <TextView
            android:text="@string/avg_speed_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_cadence_layout"
        android:layout_below="@id/add_speed_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:text="@string/avg_cadence_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/add_avg_cadence_detail"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:hint="@string/cadence_hint"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:inputType="number"
            android:gravity="center_vertical" />

        <TextView
            android:text="*"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/requiredReminder"
            android:gravity="center_vertical" />

        <TextView
            android:text="@string/avg_cadence_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_comment_layout"
        android:layout_below="@id/add_cadence_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:text="@string/comment_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/add_comment_detail"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:maxLength="20"
            android:maxLines="2"
            android:hint="@string/comment_hint"/>

    </LinearLayout>

</RelativeLayout>