<?xml version="1.0" encoding="utf-8"?>

<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_ride_switcher"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/edit_button"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/delete_button"
            android:text="@string/delete_button"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:id="@+id/date_layout"
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:layout_below="@id/edit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:text="@string/date_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/date_detail"
                android:layout_width="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:gravity="center_vertical" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/time_layout"
            android:layout_below="@id/date_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:text="@string/time_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/time_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:textSize="24sp"
                android:gravity="center_vertical" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/distance_layout"
            android:layout_below="@id/time_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:text="@string/distance_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/distance_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical" />

            <TextView
                android:text="@string/distance_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/speed_layout"
            android:layout_below="@id/distance_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:text="@string/avg_speed_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/avg_speed_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical" />

            <TextView
                android:text="@string/avg_speed_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cadence_layout"
            android:layout_below="@id/speed_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:text="@string/avg_cadence_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/avg_cadence_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical" />

            <TextView
                android:text="@string/avg_cadence_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/comment_layout"
            android:layout_below="@id/cadence_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:text="@string/comment_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/comment_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/finish_button"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish_button"/>

        <Button
            android:id="@+id/cancel_edit_ride_button"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_edit"/>

        <TextView
            android:id="@+id/edit_reminder"
            android:text="@string/add_edit_reminder"
            android:layout_below="@id/finish_button"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_marginTop="7dp"
            android:textColor="@color/requiredReminder"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/edit_date_layout"
            android:orientation="horizontal"
            android:layout_marginTop="7dp"
            android:layout_below="@id/edit_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:text="@string/date_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_date_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:inputType="date"
                android:gravity="center_vertical"
                android:hint = "@string/date_hint"/>

            <TextView
                android:text="@string/date_format_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/requiredReminder"
                android:gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/edit_time_layout"
            android:orientation="horizontal"
            android:layout_below="@id/edit_date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:text="@string/time_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_time_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:textSize="18sp"
                android:layout_weight="1"
                android:hint="@string/time_hint"
                android:inputType="time"
                android:gravity="center_vertical" />

            <TextView
                android:text="@string/time_format_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/requiredReminder"
                android:gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/edit_distance_layout"
            android:layout_below="@id/edit_time_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:text="@string/distance_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_distance_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:hint="@string/distance_hint"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:inputType="numberDecimal"
                android:gravity="center_vertical" />

            <TextView
                android:text="*"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/requiredReminder"
                android:gravity="center_vertical" />

            <TextView
                android:text="@string/distance_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="20sp"
                android:gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/edit_speed_layout"
            android:layout_below="@id/edit_distance_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:text="@string/avg_speed_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_avg_speed_detail"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:hint="@string/speed_hint"
                android:inputType="numberDecimal"
                android:gravity="center_vertical" />

            <TextView
                android:text="*"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/requiredReminder"
                android:gravity="center_vertical" />

            <TextView
                android:text="@string/avg_speed_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/edit_cadence_layout"
            android:layout_below="@id/edit_speed_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:text="@string/avg_cadence_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_avg_cadence_detail"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:hint="@string/cadence_hint"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:inputType="number"
                android:gravity="center_vertical" />

            <TextView
                android:text="*"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/requiredReminder"
                android:gravity="center_vertical" />


            <TextView
                android:text="@string/avg_cadence_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/edit_comment_layout"
            android:layout_below="@id/edit_cadence_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:text="@string/comment_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_comment_detail"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:maxLength="20"
                android:maxLines="2"
                android:hint="@string/comment_hint"/>
        </LinearLayout>


    </RelativeLayout>


</ViewSwitcher>




